<resources>
    <string name="app_name">Birth control education</string>
    <string name="title_activity_home_nav">HomeNavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="user_bceducation_com">user@bceducation.com</string>

    <!-- Navigation Items-->
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>
    <string name="why_contraceptives">Why Contraceptives</string>
    <string name="contraceptives_type">Contraceptives Type</string>
    <string name="male_options">Male Options</string>
    <string name="female_options">Female Options</string>
    <string name="statistics">Statistics</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>